# Calc8055

./: CMakeLists.txt  Dockerfile  README.md  docker-entrypoint.sh  openapi.yaml
libs/: CMakeCache.txt
libs/libs/jansson/cmake/: janssonConfigVersion.cmake
libs/libs/libarchive/: DartConfiguration.tcl  config.h
libs/libs/libarchive/tar/test/: list.h
secrets/: credentials.txt  pgp_key.asc  rsa_key.pem
src/: api_server.cpp  api_server.h  archive_utils.cpp  calculator.c  calculator.h  dependency_includes.c  json_parser.cpp  logger.cpp  logger.h  main.cpp  network.cpp  network.h  secrets.cpp  secrets.h  ui.cpp
terraform/: main.tf
